css 공백처리 추가

--- a/MOBILE/sub_05_02.html
+++ b/MOBILE/sub_05_02.html
@@ -247,8 +247,11 @@
                     <div class="survey_txt">
                         <div>
                             <span class="subtit">설문개요</span>
-                            <p>태평소로 접수된 제안들 중 상호존중과 배려 내용이 복수로 접수되었습니다. 이에 정도경영위원회는 ‘상호존중과 배려’를 우선 추진과제로
-                                선정하였고, 태광가족들이 가장 필요하다고 생각하는 의견을 반영하여 2020년 10월~12월 동안 집중적으로 추진할 예정입니다.</p>
+                            <p>설문 결과 보기 옵션 : 설문 참여후 결과 보기 가능합니다
+설문기간 : 2020. 12.7.~8.
+게시기간 : 2020. 12. 7.~9999
+중요글 체크: N
+회사 선택 유무 : N</p>
                         </div>
                     </div>
                     <div class="thum_img"><img src="img/img_board.png"></div>
