토론메뉴추가

--- a/PC/menu_06_01.html
+++ b/PC/menu_06_01.html
@@ -6,7 +6,7 @@
 		<title>태광그룹 정도경영</title>
 		<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 
 	<body>
