--- a/PC/menu_06_02.html
+++ b/PC/menu_06_02.html
@@ -17,8 +17,8 @@
 					<li><a href="menu_02.html">태광가족 생활방식</a></li>
 					<li><a href="menu_03.html">각종 제안</a></li>
 					<li><a href="menu_04_01.html">게시판</a></li>
-					<li class="on"><a href="menu_05_01.html">설문</a></li>
-					<li><a href="menu_06_01.html">토론</a></li>
+					<li><a href="menu_05_01.html">설문</a></li>
+					<li class="on"><a href="menu_06_01.html">토론</a></li>
 				</ul>
 				<div class="conts">
 					<div class="subtit">
@@ -266,29 +266,19 @@
 									<ul>
 										<li>
 											<span class="category">위원회 소식</span>
-											<span class="title"
-												><a href="menu_04_03.html" class="notice"
-													><span class="notice_badge">공지</span>하반기 정도경영 가치 전파 교육 실시</a
-												></span
-											>
+											<span class="title"><a href="menu_04_03.html">하반기 정도경영 가치 전파 교육 실시</a></span>
 											<span class="date">2020.01.06</span>
-											<span class="view">500</span>
+											<span class="view">50000</span>
 										</li>
 										<li>
-											<span class="category">정도경영 캠페인</span>
-											<span class="title"
-												><a href="menu_04_03.html" class="notice"
-													><span class="notice_badge">공지</span>(6)공정한 거래와 동반성장</a
-												></span
-											>
+											<span class="category">위원회 소식</span>
+											<span class="title"><a href="menu_04_03.html">하반기 정도경영 가치 전파 교육 실시</a></span>
 											<span class="date">2020.01.06</span>
-											<span class="view">500</span>
+											<span class="view">50000</span>
 										</li>
 										<li>
-											<span class="category">정도경영 사례집</span>
-											<span class="title"
-												><a href="menu_04_03.html">정도경영 온라인 소통창구 '태평소' 접수 및 처리 현황</a></span
-											>
+											<span class="category">위원회 소식</span>
+											<span class="title"><a href="menu_04_03.html">하반기 정도경영 가치 전파 교육 실시</a></span>
 											<span class="date">2020.01.06</span>
 											<span class="view">50000</span>
 										</li>
@@ -476,7 +466,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="conts on">
+				<div class="conts">
 					<div class="board_03">
 						<div class="srchbox">
 							<input type="search" />
@@ -608,9 +598,338 @@
 						</div>
 					</div>
 				</div>
+				<div class="conts on">
+					<div class="board_03">
+						<div class="wrap_board">
+							<div class="content_board_discuss">
+								<div class="header_board_survey">
+									<span class="discuss_ing">토론 진행 중</span>
+									<div class="discuss_list_tit">회식이 소통의 활성화와 유대감 증진에 도움이 된다고 생각하십니까?</div>
+									<div class="discuss_list_date"><span>2020.11.20</span> | 조회 <span>100</span></div>
+								</div>
+								<div class="article_discuss">
+									<div class="wrap_chart">
+										<p class="discuss_ing">토론 진행 중</p>
+										<p class="discuss_list_tit">회식이 소통의 활성화와 유대감 증진에 도움이 된다고 생각하십니까?</p>
+										<div id="piechart" style="width: 800px; height: 500px"></div>
+									</div>
+									<h5>주요 의견</h5>
+									<div class="wrap_best">
+										<div class="agree">
+											<div class="agree_tit">도움이 된다<span>120</span></div>
+											<ul>
+												<li>
+													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람
+													대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리 기상일세
+													<div class="like">45</div>
+												</li>
+												<li>
+													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람
+													대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리 기상일세
+													<div class="like">45</div>
+												</li>
+												<li>
+													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람
+													대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리 기상일세
+													<div class="like">45</div>
+												</li>
+											</ul>
+										</div>
+										<div class="disagree">
+											<div class="disagree_tit">도움이 안된다<span>120</span></div>
+											<ul>
+												<li>
+													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람
+													대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리 기상일세
+													<div class="like">45</div>
+												</li>
+												<li>
+													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람
+													대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리 기상일세
+													<div class="like">45</div>
+												</li>
+												<li>
+													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람
+													대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리 기상일세
+													<div class="like">45</div>
+												</li>
+											</ul>
+										</div>
+									</div>
+									<h5>
+										토론 참여
+										<span class="info">
+											* 작성하신 개인정보는 다른 사용자에게 보여지지 않으며, 이벤트 진행 및 통계자료로만 사용됩니다.
+										</span>
+									</h5>
+
+									<div class="wrpa_write_opinion">
+										<table>
+											<tr class="CP_CODE">
+												<td class="tit">회사 선택</td>
+												<td class="con">
+													<select class="form-control" id="CP_CODE" name="CP_CODE">
+														<option value="" disabled selected>회사 선택</option>
+														<option value="T001">태광산업(주)</option>
+														<option value="T002">대한화섬(주)</option>
+														<option value="T024">흥국생명</option>
+														<option value="T004">흥국화재</option>
+														<option value="T004">흥국증권</option>
+														<option value="T004">예가람저축은행</option>
+														<option value="T004">고려저축은행</option>
+														<option value="T004">티브로드</option>
+														<option value="T004">티캐스트</option>
+														<option value="T004">kct</option>
+														<option value="T004">티시스</option>
+														<option value="T004">티알엔</option>
+													</select>
+													<!-- 202008추가 -->
+													<span class="txt_s">*사실확인 및 빠른 처리를 위하여 필요한 정보입니다.</span>
+													<!-- end_202008추가 -->
+												</td>
+											</tr>
+											<tr>
+												<td class="tit">이름</td>
+												<td class="con"><input type="text" class="form-control" name="NAME" id="NAME" size="22" /></td>
+											</tr>
+											<tr>
+												<td class="tit">사번</td>
+												<td class="con"><input type="text" class="form-control" size="22" /></td>
+											</tr>
+											<tr>
+												<td class="tit">연락처</td>
+												<td class="con">
+													<select>
+														<option>010</option>
+														<option>011</option>
+														<option>016</option>
+														<option>017</option>
+														<option>018</option>
+														<option>019</option>
+													</select>
+													- <input type="num" class="form-control" name="TEL" id="TEL" size="4" /> -
+													<input type="num" class="form-control" name="TEL" id="TEL" size="4" />
+												</td>
+											</tr>
+											<tr>
+												<td class="tit">의견 선택*</td>
+												<td class="con">
+													<input type="radio" id="r1" name="group1" value="agree" />
+													<label for="r1"><span></span>도움이 된다</label>
+													<input type="radio" id="r2" name="group1" value="disagree" checked="checked" />
+													<label for="r2"><span></span>도움이 안된다</label>
+												</td>
+											</tr>
+											<tr>
+												<td class="tit">의견 작성*</td>
+												<td class="con">
+													<textarea></textarea>
+												</td>
+											</tr>
+											<tr>
+												<td class="tit">비밀번호 입력*</td>
+												<td class="con">
+													<input type="password" class="form-control" size="22" />
+													<span class="txt_s"
+														>* 작성하신 의견을 수정/삭제 할 때 사용하실 비밀번호 입니다. 분실시 수정/삭제
+														불가합니다.</span
+													>
+												</td>
+											</tr>
+										</table>
+									</div>
+									<div class="wrap_btn"><button>의견 작성하기</button></div>
+									<h5>전체 의견</h5>
+									<div class="wrap_board_opinion">
+										<div class="header_opinion">
+											<div class="tab_opinion">
+												<span class="on">전체</span>| <span>도움이 된다</span>|
+												<span>도움이 안된다</span>
+											</div>
+											<div class="sort">
+												<span>최신순<img src="img/ic_down.png" /></span>
+												<span>공감순<img src="img/ic_down.png" /></span>
+											</div>
+										</div>
+										<div class="list_opinion">
+											<ul>
+												<li>
+													<div class="wrap_opinion">
+														<span class="date">2021-02-10 12:15</span>
+
+														<div class="edit">
+															<span>수정</span>|
+															<span>삭제</span>
+														</div>
+														<div class="txt_reply">
+															동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산
+															대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리
+															기상일세 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리
+															화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리
+															불변함은 우리 기상일세
+														</div>
+														<span class="like">45</span>
+														<span>댓글 <span class="num_reply">3</span></span>
+													</div>
+													<div class="wrap_reply">
+														<div class="reply">
+															<span class="date">2021-02-10 12:10</span>
+															<div class="edit">
+																<span>수정</span>|
+																<span>삭제</span>
+															</div>
+															<div class="txt_reply">
+																동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산
+																대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리
+																기상일세
+															</div>
+														</div>
+														<div class="write_reply">
+															<div class="write_box">
+																<textarea placeholder="댓글 작성"></textarea>
+															</div>
+															<div class="write_box">
+																<input type="password" placeholder="비밀번호 입력" />
+																<span class="txt_s"
+																	>* 작성하신 의견을 수정/삭제 할 때 사용하실 비밀번호 입니다. 분실시 수정/삭제
+																	불가합니다.</span
+																>
+																<button>댓글 등록</button>
+															</div>
+														</div>
+														<div class="wrap_close_btn"><button class="close_reply">댓글 접기</button></div>
+													</div>
+												</li>
+												<li>
+													<div class="wrap_opinion">
+														<span class="date">2021-02-10 12:10</span>
+														<div class="edit">
+															<span>수정</span>|
+															<span>삭제</span>
+														</div>
+														<div class="txt_reply">
+															동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산
+															대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리
+															기상일세
+														</div>
+														<span class="like">45</span>
+														<span>댓글 <span class="num_reply">3</span></span>
+													</div>
+													<div class="wrap_reply">
+														<div class="reply">
+															<span class="date">2021-02-10 12:10</span>
+															<div class="edit">
+																<span>수정</span>|
+																<span>삭제</span>
+															</div>
+															<div class="txt_reply">
+																동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산
+																대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리
+																기상일세
+															</div>
+														</div>
+
+														<div class="wrap_close_btn"><button class="close_reply">댓글 접기</button></div>
+													</div>
+												</li>
+												<li>
+													<div class="wrap_opinion">
+														<span class="date">2021-02-10 12:10</span>
+														<div class="edit">
+															<span>수정</span>|
+															<span>삭제</span>
+														</div>
+														<div class="txt_reply">
+															동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산
+															대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리
+															기상일세
+														</div>
+														<span class="like">45</span>
+														<span>댓글 <span class="num_reply">3</span></span>
+													</div>
+												</li>
+												<li>
+													<div class="wrap_opinion">
+														<span class="date">2021-02-10 12:10</span>
+														<div class="edit">
+															<span>수정</span>|
+															<span>삭제</span>
+														</div>
+														<div class="txt_reply">
+															동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산
+															대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리
+															기상일세
+														</div>
+														<span class="like">45</span>
+														<span>댓글 <span class="num_reply">3</span></span>
+													</div>
+												</li>
+												<li>
+													<div class="wrap_opinion">
+														<span class="date">2021-02-10 15:21</span>
+														<div class="edit">
+															<span>수정</span>|
+															<span>삭제</span>
+														</div>
+														<div class="txt_reply">
+															동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산
+															대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리
+															기상일세
+														</div>
+														<span class="like">45</span>
+														<span>댓글 <span class="num_reply">3</span></span>
+													</div>
+												</li>
+											</ul>
+										</div>
+									</div>
+									<div class="footer_opinion">
+										<div class="paging">
+											<span>
+												<a><img src="img/btn01_first.gif" /></a>
+												<a><img src="img/btn01_prev.gif" /></a>
+												<a class="now" href="#">1</a>
+												<a href="#">2</a>
+												<a href="#">3</a>
+												<a href="#">4</a>
+												<a href="#">5</a>
+												<a href="#">6</a>
+												<a href="#">7</a>
+												<a href="#">8</a>
+												<a href="#">9</a>
+												<a href="#">10</a>
+												<a><img src="img/btn01_next.gif" /></a>
+												<a><img src="img/btn01_last.gif" /></a>
+											</span>
+										</div>
+										<div class="srchbox">
+											<input type="search" />
+											<a href="#"><img src="img/ic_srch.png" /></a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="btn_list">
+							<a href="menu_05_01.html"><button>목록</button></a>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
-
+		<!-- 팝업_비밀번호 -->
+		<div class="wrap_layerpop" style="display: none">
+			<div class="layer">
+				<div class="layer_tit">
+					비밀번호 인증
+					<span class="layer_close"><img src="img/ic_close.svg" alt="닫기" /></span>
+				</div>
+				<div class="layer_con">의견 작성 시 등록하신 비밀번호를 입력해주세요.</div>
+				<input type="password" />
+				<button class="border">비밀번호 입력</button>
+			</div>
+		</div>
+		<!-- //팝업_비밀번호 -->
 		<script src="js/jquery-1.11.3.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/jquery.form.js"></script>
@@ -757,5 +1076,58 @@
 				});
 			});
 		</script>
+		<!-- 파이 차트 -->
+		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+		<script type="text/javascript">
+			google.charts.load("current", {packages: ["corechart"]});
+			google.charts.setOnLoadCallback(drawChart);
+
+			function drawChart() {
+				var data = google.visualization.arrayToDataTable([
+					["opinion", "vote"],
+					["도움이 된다", 11],
+					["도움이 안된다", 2],
+				]);
+
+				var options = {
+					// title: "My Daily Activities",
+					colors: ["#F2994A", "#bdbdbd"],
+					backgroundColor: "#f4f4f4",
+					legend: "right",
+				};
+
+				var chart = new google.visualization.PieChart(document.getElementById("piechart"));
+
+				chart.draw(data, options);
+			}
+		</script>
+		<!-- <script type="text/javascript" src="js/Chart.min.js"></script>
+		<script type="text/javascript" src="js/chart-plugin.js"></script>
+		<script>
+			var ctx = document.getElementById("myChart").getContext("2d");
+			var myChart = new Chart(ctx, {
+				type: "pie",
+				data: {
+					labels: ["도움이 된다", "도움이 안된다"],
+					datasets: [
+						{
+							label: "# of Votes",
+							data: [12, 19],
+							backgroundColor: ["rgba(255, 99, 132)", "rgba(54, 162, 235)"],
+
+							borderWidth: 1,
+						},
+					],
+				},
+				options: {
+					labels: {
+						render: "percentage",
+						fontSize: 16,
+						fontStyle: "bold",
+						fontColor: "#fff",
+					},
+				},
+			});
+		</script> -->
 	</body>
 </html>
