차트사이즈 변경

--- a/PC/menu_06_02.html
+++ b/PC/menu_06_02.html
@@ -23,17 +23,10 @@
 				<div class="conts">
 					<div class="subtit">
 						<h2>고객중심의 정도경영</h2>
-						<p>
-							'고객중심의 정도경영'은 모든 활동을 고객의 관점에서 수행하고<br />인간존중문화를 구현하며 법과 원칙을
-							준수하기 위한 태광가족의 생활방식입니다.
-						</p>
+						<p>'고객중심의 정도경영'은 모든 활동을 고객의 관점에서 수행하고<br />인간존중문화를 구현하며 법과 원칙을 준수하기 위한 태광가족의 생활방식입니다.</p>
 					</div>
 					<p class="img"><img src="img/ethics_01.png" alt="고객중심의 정도경영" /></p>
-					<p class="t_box">
-						태광그룹은 모든 의사결정과 행동에 있어<br /><span class="fcolor3"
-							>고객중심의 정도경영을 최우선 가치로 지향</span
-						>합니다.
-					</p>
+					<p class="t_box">태광그룹은 모든 의사결정과 행동에 있어<br /><span class="fcolor3">고객중심의 정도경영을 최우선 가치로 지향</span>합니다.</p>
 				</div>
 				<div class="conts">
 					<div class="subtit">
@@ -57,14 +50,11 @@
 
 						<div class="conts_child on">
 							<p class="text_c">
-								<span class="bold">고객중심의 정도경영 관련 아이디어, 운영상 개선사항 및 건의사항을 접수</span>하고
-								있습니다.<br />우수한 제안 내용은 지원팀에서 검토한 후, 위원회의 논의를 거쳐<br /><span class="fcolor4"
-									>그룹차원의 정도경영 관련 정책에 반영</span
-								>됩니다.
+								<span class="bold">고객중심의 정도경영 관련 아이디어, 운영상 개선사항 및 건의사항을 접수</span>하고 있습니다.<br />우수한 제안 내용은 지원팀에서 검토한 후, 위원회의
+								논의를 거쳐<br /><span class="fcolor4">그룹차원의 정도경영 관련 정책에 반영</span>됩니다.
 							</p>
 							<p class="text_c" style="display: none">
-								<span class="bold">고객중심의 정도경영 관련 아이디어, 운영상 개선사항 및 건의사항을 접수</span>하고
-								있습니다.<br />우수한 제안 내용은 담당조직에서 검토한 후,
+								<span class="bold">고객중심의 정도경영 관련 아이디어, 운영상 개선사항 및 건의사항을 접수</span>하고 있습니다.<br />우수한 제안 내용은 담당조직에서 검토한 후,
 								<span class="fcolor4">회사의 정도경영 관련 정책에 반영</span>됩니다.
 							</p>
 							<ul class="desc">
@@ -79,9 +69,7 @@
 								<ol>
 									<li>개인정보의 수집 및 이용목적</li>
 									<ul>
-										<li>
-											고객중심의 정도경영 구현을 위한 아이디어 제안, 운영 개선사항, 기타 건의사항 및 애로사항 접수
-										</li>
+										<li>고객중심의 정도경영 구현을 위한 아이디어 제안, 운영 개선사항, 기타 건의사항 및 애로사항 접수</li>
 										<li>이용자가 접수한 제안 결과는 이메일 또는 전화로 회신</li>
 									</ul>
 									<li>수집하는 개인정보 항목</li>
@@ -98,12 +86,8 @@
 							<form id="board" method="POST" enctype="multipart/form-data">
 								<input type="hidden" id="action" name="action" value="insertCommitteeBoard.json" />
 								<div class="chk">
-									<label
-										><input type="checkbox" id="agree" name="agree" class="input_chk" /> 개인정보 수집에 동의함</label
-									>
-									<span class="txt"
-										>* 작성자께서는 본 동의에 거부하실 권리가 있으나, 동의하지 않으실 경우 글 작성이 불가능합니다.</span
-									>
+									<label><input type="checkbox" id="agree" name="agree" class="input_chk" /> 개인정보 수집에 동의함</label>
+									<span class="txt">* 작성자께서는 본 동의에 거부하실 권리가 있으나, 동의하지 않으실 경우 글 작성이 불가능합니다.</span>
 								</div>
 								<div class="wrap_tit">
 									<h4>작성자 정보(선택사항)</h4>
@@ -214,23 +198,13 @@
 										<tr>
 											<td class="tit">첨부</td>
 											<td class="con">
-												<input
-													type="file"
-													class="form-control"
-													name="file"
-													id="file"
-													accept=".zip"
-													style="display: none"
-												/>
+												<input type="file" class="form-control" name="file" id="file" accept=".zip" style="display: none" />
 												<span id="fileName" class="filename">선택된 파일없음</span>
 												<label for="file" class="fileBtn">파일선택</label>
 											</td>
 										</tr>
 									</table>
-									<p class="txt">
-										* 첨부파일은 최대 10MB까지 첨부 가능합니다. 복수의 파일을 첨부할 경우 압축해서 등록해주시기
-										바랍니다.
-									</p>
+									<p class="txt">* 첨부파일은 최대 10MB까지 첨부 가능합니다. 복수의 파일을 첨부할 경우 압축해서 등록해주시기 바랍니다.</p>
 								</div>
 								<div class="wrap_btn">
 									<button type="submit" class="form-control" name="upload" id="upload">접수</button>
@@ -446,17 +420,13 @@
 								<div class="article">
 									<img src="img/img_article.png" />
 									<div class="text">
-										우리그룹은 11월1일과 2일 강원도 춘천시 엘리시안 강촌 리조트에서 그룹 모든 임원들과 임원직책 리더들이
-										참석한 '고객중심의 정도경영, 핵심가치와 리더의 역할' 이라는 주제로 워크숍을 진행했다. 행사는
-										정도경영위원회 임수빈 위원장 강연을 포함한 내외부 특강과 '태광가족들이 바라는 리더의 모습' 인터뷰
-										영상 시청, 조별 분임의 , 캠프파이어_대화의 시간 등으로 구성되었다. 특히 분임토의는 정도경영,
-										고객중심, 스마트 워크, 상호존중과 배려, 리더십, 솔선범 , 소통 등 7가지 핵심가치를 가지고 현재 우리의
-										모습과 리더의 바람직한 역할 등에 대해 핵심 리더 모두가 머리를 맞대고 열띤 토론을 진행했다.
+										우리그룹은 11월1일과 2일 강원도 춘천시 엘리시안 강촌 리조트에서 그룹 모든 임원들과 임원직책 리더들이 참석한 '고객중심의 정도경영, 핵심가치와 리더의 역할' 이라는
+										주제로 워크숍을 진행했다. 행사는 정도경영위원회 임수빈 위원장 강연을 포함한 내외부 특강과 '태광가족들이 바라는 리더의 모습' 인터뷰 영상 시청, 조별 분임의 ,
+										캠프파이어_대화의 시간 등으로 구성되었다. 특히 분임토의는 정도경영, 고객중심, 스마트 워크, 상호존중과 배려, 리더십, 솔선범 , 소통 등 7가지 핵심가치를 가지고
+										현재 우리의 모습과 리더의 바람직한 역할 등에 대해 핵심 리더 모두가 머리를 맞대고 열띤 토론을 진행했다.
 									</div>
 									<div class="attach">
-										<div>
-											<img src="img/ic_file.png" /><span>고객중심의 정도경영, 핵심가치와 리더의 역할1.pdf</span>
-										</div>
+										<div><img src="img/ic_file.png" /><span>고객중심의 정도경영, 핵심가치와 리더의 역할1.pdf</span></div>
 									</div>
 								</div>
 							</div>
@@ -475,9 +445,7 @@
 						<div class="wrap_board">
 							<div class="content_board_survey">
 								<div class="header_board_survey">
-									<div class="article_tit">
-										<span class="article_badge_doing">투표중</span>2020년 하반기 우선집중 과제 선정
-									</div>
+									<div class="article_tit"><span class="article_badge_doing">투표중</span>2020년 하반기 우선집중 과제 선정</div>
 									<div class="article_info"><span>2020.11.20</span> | 조회 <span>100</span></div>
 								</div>
 								<div class="article_survey">
@@ -495,9 +463,8 @@
 										<div>
 											<span class="tit">설문개요</span>
 											<p>
-												태평소로 접수된 제안들 중 상호존중과 배려 내용이 복수로 접수되었습니다. 이에 정도경영위원회는
-												‘상호존중과 배려’를 우선 추진과제로 선정하였고, 태광가족들이 가장 필요하다고 생각하는 의견을
-												반영하여 2020년 10월~12월 동안 집중적으로 추진할 예정입니다.
+												태평소로 접수된 제안들 중 상호존중과 배려 내용이 복수로 접수되었습니다. 이에 정도경영위원회는 ‘상호존중과 배려’를 우선 추진과제로 선정하였고, 태광가족들이
+												가장 필요하다고 생각하는 의견을 반영하여 2020년 10월~12월 동안 집중적으로 추진할 예정입니다.
 											</p>
 										</div>
 										<div class="wrap_img">
@@ -527,9 +494,8 @@
 										</div>
 										<div class="wrap_q">
 											<div class="question">
-												상호존중과 배려의 정착을 위하여 우선 추진하였으면 하는 사항을 아래에서 선택해주세요. (복수 선택
-												가능)상호존중과 배려의 정착을 위하여 우선 추진하였으면 하는 사항을 아래에서 선택해주세요. (복수
-												선택 가능)
+												상호존중과 배려의 정착을 위하여 우선 추진하였으면 하는 사항을 아래에서 선택해주세요. (복수 선택 가능)상호존중과 배려의 정착을 위하여 우선 추진하였으면 하는
+												사항을 아래에서 선택해주세요. (복수 선택 가능)
 											</div>
 											<div class="answer">
 												<div>
@@ -581,9 +547,7 @@
 									</form>
 
 									<div class="attach">
-										<div>
-											<img src="img/ic_file.png" /><span>고객중심의 정도경영, 핵심가치와 리더의 역할1.pdf</span>
-										</div>
+										<div><img src="img/ic_file.png" /><span>고객중심의 정도경영, 핵심가치와 리더의 역할1.pdf</span></div>
 									</div>
 
 									<div class="wrap_btn">
@@ -619,18 +583,18 @@
 											<div class="agree_tit">도움이 된다<span>120</span></div>
 											<ul>
 												<li>
-													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람
-													대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리 기상일세
+													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람
+													서리 불변함은 우리 기상일세
 													<div class="like">45</div>
 												</li>
 												<li>
-													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람
-													대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리 기상일세
+													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람
+													서리 불변함은 우리 기상일세
 													<div class="like">45</div>
 												</li>
 												<li>
-													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람
-													대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리 기상일세
+													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람
+													서리 불변함은 우리 기상일세
 													<div class="like">45</div>
 												</li>
 											</ul>
@@ -639,18 +603,18 @@
 											<div class="disagree_tit">도움이 안된다<span>120</span></div>
 											<ul>
 												<li>
-													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람
-													대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리 기상일세
+													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람
+													서리 불변함은 우리 기상일세
 													<div class="like">45</div>
 												</li>
 												<li>
-													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람
-													대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리 기상일세
+													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람
+													서리 불변함은 우리 기상일세
 													<div class="like">45</div>
 												</li>
 												<li>
-													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람
-													대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리 기상일세
+													동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람
+													서리 불변함은 우리 기상일세
 													<div class="like">45</div>
 												</li>
 											</ul>
@@ -658,9 +622,7 @@
 									</div>
 									<h5>
 										토론 참여
-										<span class="info">
-											* 작성하신 개인정보는 다른 사용자에게 보여지지 않으며, 이벤트 진행 및 통계자료로만 사용됩니다.
-										</span>
+										<span class="info"> * 작성하신 개인정보는 다른 사용자에게 보여지지 않으며, 이벤트 진행 및 통계자료로만 사용됩니다. </span>
 									</h5>
 
 									<div class="wrpa_write_opinion">
@@ -730,10 +692,7 @@
 												<td class="tit">비밀번호 입력*</td>
 												<td class="con">
 													<input type="password" class="form-control" size="22" />
-													<span class="txt_s"
-														>* 작성하신 의견을 수정/삭제 할 때 사용하실 비밀번호 입니다. 분실시 수정/삭제
-														불가합니다.</span
-													>
+													<span class="txt_s">* 작성하신 의견을 수정/삭제 할 때 사용하실 비밀번호 입니다. 분실시 수정/삭제 불가합니다.</span>
 												</td>
 											</tr>
 										</table>
@@ -763,11 +722,9 @@
 															<span>삭제</span>
 														</div>
 														<div class="txt_reply">
-															동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산
-															대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리
-															기상일세 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리
-															화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리
-															불변함은 우리 기상일세
+															동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯
+															바람 서리 불변함은 우리 기상일세 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세
+															남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리 기상일세
 														</div>
 														<span class="like">45</span>
 														<span>댓글 <span class="num_reply">3</span></span>
@@ -796,9 +753,8 @@
 																<span>삭제</span>
 															</div>
 															<div class="txt_reply">
-																동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산
-																대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리
-																기상일세
+																동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을
+																두른듯 바람 서리 불변함은 우리 기상일세
 															</div>
 														</div>
 														<!-- //댓글본문 -->
@@ -825,10 +781,7 @@
 															</div>
 															<div class="btn_box">
 																<input type="password" placeholder="비밀번호 입력" />
-																<span class="txt_s"
-																	>* 작성하신 의견을 수정/삭제 할 때 사용하실 비밀번호 입니다. 분실시 수정/삭제
-																	불가합니다.</span
-																>
+																<span class="txt_s">* 작성하신 의견을 수정/삭제 할 때 사용하실 비밀번호 입니다. 분실시 수정/삭제 불가합니다.</span>
 																<button class="confirm">댓글 등록</button>
 															</div>
 														</div>
@@ -848,9 +801,8 @@
 															<span>삭제</span>
 														</div>
 														<div class="txt_reply">
-															동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산
-															대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리
-															기상일세
+															동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯
+															바람 서리 불변함은 우리 기상일세
 														</div>
 														<span class="like">45</span>
 														<span>댓글 <span class="num_reply">3</span></span>
@@ -863,9 +815,8 @@
 																<span>삭제</span>
 															</div>
 															<div class="txt_reply">
-																동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산
-																대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리
-																기상일세
+																동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을
+																두른듯 바람 서리 불변함은 우리 기상일세
 															</div>
 														</div>
 
@@ -880,9 +831,8 @@
 															<span>삭제</span>
 														</div>
 														<div class="txt_reply">
-															동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산
-															대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리
-															기상일세
+															동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯
+															바람 서리 불변함은 우리 기상일세
 														</div>
 														<span class="like">45</span>
 														<span>댓글 <span class="num_reply">3</span></span>
@@ -896,9 +846,8 @@
 															<span>삭제</span>
 														</div>
 														<div class="txt_reply">
-															동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산
-															대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리
-															기상일세
+															동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯
+															바람 서리 불변함은 우리 기상일세
 														</div>
 														<span class="like">45</span>
 														<span>댓글 <span class="num_reply">3</span></span>
@@ -912,9 +861,8 @@
 															<span>삭제</span>
 														</div>
 														<div class="txt_reply">
-															동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산
-															대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리
-															기상일세
+															동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯
+															바람 서리 불변함은 우리 기상일세
 														</div>
 														<span class="like">45</span>
 														<span>댓글 <span class="num_reply">3</span></span>
@@ -1130,10 +1078,17 @@
 				]);
 
 				var options = {
-					// title: "My Daily Activities",
 					colors: ['#F2994A', '#bdbdbd'],
 					backgroundColor: '#f4f4f4',
-					legend: 'right',
+					legend: {position: 'bottom', textStyle: {fontSize: 13}},
+					width: '100%',
+					height: '100%',
+					chartArea: {
+						top: '10%',
+						height: '70%',
+						width: '70%',
+					},
+					fontSize: 16,
 				};
 
 				var chart = new google.visualization.PieChart(document.getElementById('piechart'));
@@ -1141,33 +1096,5 @@
 				chart.draw(data, options);
 			}
 		</script>
-		<!-- <script type="text/javascript" src="js/Chart.min.js"></script>
-		<script type="text/javascript" src="js/chart-plugin.js"></script>
-		<script>
-			var ctx = document.getElementById("myChart").getContext("2d");
-			var myChart = new Chart(ctx, {
-				type: "pie",
-				data: {
-					labels: ["도움이 된다", "도움이 안된다"],
-					datasets: [
-						{
-							label: "# of Votes",
-							data: [12, 19],
-							backgroundColor: ["rgba(255, 99, 132)", "rgba(54, 162, 235)"],
-
-							borderWidth: 1,
-						},
-					],
-				},
-				options: {
-					labels: {
-						render: "percentage",
-						fontSize: 16,
-						fontStyle: "bold",
-						fontColor: "#fff",
-					},
-				},
-			});
-		</script> -->
 	</body>
 </html>
