--- a/MOBILE/sub_06_03.html
+++ b/MOBILE/sub_06_03.html
@@ -363,7 +363,7 @@
                         <!-- tabmenu -->
                         <div class="opinion_tabs_board">
                             <label class="all_tab" for="all">전체</label>
-                            <label class="yes_tab" for="yes">동의합니다</label>
+                            <label class="yes_tab" for="yes">매우매우 동의합니다</label>
                             <label class="no_tab" for="no">동의하지 않습니다</label>
                         </div>
                         <!-- //tabmenu -->
@@ -446,7 +446,7 @@
                                                         <textarea placeholder="댓글 작성"></textarea>
                                                     </div>
                                                     <div class="btn_box">
-                                                        <input type="password" placeholder="비밀번호 입력-분실시 수정/삭제 불가" />
+                                                        <input type="password" placeholder="비밀번호 입력" />
                                                         <span class="txt_s"
                                                             ></span
                                                         >
