의견검색 placeholder 추가

--- a/MOBILE/sub_06_03.html
+++ b/MOBILE/sub_06_03.html
@@ -509,7 +509,7 @@
 						</div>
 						<!-- 검색 -->
 						<div class="srch_opinion">
-							<input type="search" id="search" data-type="" />
+							<input type="search" id="search" data-type="" placeholder="의견 검색" />
 							<span id="sort">
 								<a href="#" class="sort_newest" data-togle="0">최신순</a>
 								<a href="#" class="sort_like" data-togle="0">공감순</a>
@@ -566,7 +566,8 @@
 														동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은
 														우리 기상일세 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람
 														서리 불변함은 우리 기상일세
-														</textarea>
+														</textarea
+														>
 													</div>
 													<div class="btn_box">
 														<button class="cancel">취소</button>
@@ -599,7 +600,8 @@
 																동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은
 																우리 기상일세 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람
 																서리 불변함은 우리 기상일세
-															</textarea>
+															</textarea
+															>
 														</div>
 														<div class="btn_box">
 															<button class="cancel">취소</button>
