검색영역 노출 수정

--- a/MOBILE/sub_06_01.html
+++ b/MOBILE/sub_06_01.html
@@ -142,7 +142,10 @@
 					<div class="board_header">
 						<div class="g_srch">
 							<input type="search" id="search" data-type="" />
-							<span id="sort"><a href="#" id="eo1999" class="sort_new" data-togle="0">최신순</a><a href="#" id="eo2000" class="sort_view" data-togle="0">조회순</a></span>
+							<span id="sort">
+								<a href="#" id="eo1999" class="sort_new" data-togle="0">최신순</a>
+								<a href="#" id="eo2000" class="sort_view" data-togle="0">조회순</a>
+							</span>
 						</div>
 						<input id="stype" class="hidden" value="" />
 						<input id="stype2" class="hidden" value="" />
@@ -325,6 +328,19 @@
 					</div>
 				</div>
 				<div class="swiper-slide">
+					<div class="board_header">
+						<div class="g_srch">
+							<input type="search" id="search" data-type="" />
+							<span id="sort">
+								<a href="#" id="eo1999" class="sort_new" data-togle="0">최신순</a>
+								<a href="#" id="eo2000" class="sort_view" data-togle="0">조회순</a>
+							</span>
+						</div>
+						<input id="stype" class="hidden" value="" />
+						<input id="stype2" class="hidden" value="" />
+						<div class="board_tit">토론</div>
+					</div>
+
 					<div class="wrap_discuss_list">
 						<!-- 토론 목록 -->
 						<div class="discuss_list">
