--- a/ADMIN/write_discuss.html
+++ b/ADMIN/write_discuss.html
@@ -310,9 +310,7 @@
 											</select>
 										</div>
 										<div class="txt_reply">
-											동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은
-											우리 기상일세 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람
-											서리 불변함은 우리 기상일세
+											<pre>동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리 기상일세 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람서리 불변함은 우리 기상일세</pre>
 										</div>
 										<span class="like">45</span>
 										<span class="btn_reply">댓글 <span class="num_reply">3</span></span>
@@ -331,8 +329,7 @@
 												</select>
 											</div>
 											<div class="txt_reply">
-												동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은
-												우리 기상일세
+												<pre>동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리 기상일세</pre>
 											</div>
 										</div>
 										<!-- //댓글본문 -->
