--- a/RelayBoard/PC/list.html
+++ b/RelayBoard/PC/list.html
@@ -37,7 +37,7 @@
 					</select>
 					<button>글쓰기</button>
 					<div class="list">
-						<div class="list-box">
+						<div class="listbox">
 							<div class="writer">
 								<div class="team">정도경영위원회팀</div>
 								<div class="name">홍길동</div>
@@ -49,7 +49,7 @@
 								<span class="date">2021-06-30</span>
 							</div>
 						</div>
-						<div class="list-box">
+						<div class="listbox">
 							<div class="writer">
 								<div class="team">정도경영위원회팀</div>
 								<div class="name">홍길동</div>
@@ -61,7 +61,7 @@
 								<span class="date">2021-06-30</span>
 							</div>
 						</div>
-						<div class="list-box">
+						<div class="listbox">
 							<div class="writer">
 								<div class="team">정도경영위원회팀</div>
 								<div class="name">홍길동</div>
@@ -73,7 +73,7 @@
 								<span class="date">2021-06-30</span>
 							</div>
 						</div>
-						<div class="list-box">
+						<div class="listbox">
 							<div class="writer">
 								<div class="team">정도경영위원회팀</div>
 								<div class="name">홍길동</div>
@@ -85,7 +85,7 @@
 								<span class="date">2021-06-30</span>
 							</div>
 						</div>
-						<div class="list-box">
+						<div class="listbox">
 							<div class="writer">
 								<div class="team">정도경영위원회팀</div>
 								<div class="name">홍길동</div>
@@ -97,7 +97,7 @@
 								<span class="date">2021-06-30</span>
 							</div>
 						</div>
-						<div class="list-box">
+						<div class="listbox">
 							<div class="writer">
 								<div class="team">정도경영위원회팀</div>
 								<div class="name">홍길동</div>
@@ -109,7 +109,7 @@
 								<span class="date">2021-06-30</span>
 							</div>
 						</div>
-						<div class="list-box">
+						<div class="listbox">
 							<div class="writer">
 								<div class="team">정도경영위원회팀</div>
 								<div class="name">홍길동</div>
@@ -121,7 +121,7 @@
 								<span class="date">2021-06-30</span>
 							</div>
 						</div>
-						<div class="list-box">
+						<div class="listbox">
 							<div class="writer">
 								<div class="team">정도경영위원회팀</div>
 								<div class="name">홍길동</div>
@@ -133,7 +133,7 @@
 								<span class="date">2021-06-30</span>
 							</div>
 						</div>
-						<div class="list-box">
+						<div class="listbox">
 							<div class="writer">
 								<div class="team">정도경영위원회팀</div>
 								<div class="name">홍길동</div>
